objects/Ship_to_Site__c.object
<CustomObject>
    <description>Ship to site from Oracle ERP</description>
    <fields>
        <fullName>Address1__c</fullName>
        <label>Address1</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address2__c</fullName>
        <label>Address2</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address3__c</fullName>
        <label>Address3</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Address_Unique_ID__c</fullName>
        <description>Used to check for duplicate Ship To Site Addresses</description>
        <formula>Address1__c  &amp;  Address2__c  &amp;  Address3__c  &amp;  City__c  &amp;  State__c  &amp;  Zip__c  &amp;  Text(Country__c)</formula>
        <label>Address Unique ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Attention__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Attention</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Shipping Sites</relationshipLabel>
        <relationshipName>Shipping_Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>AutorabitExtId__c</fullName>
        <description>External Id created by AutoRABIT</description>
        <externalId>true</externalId>
        <label>AutorabitExtId__c</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <label>Contact First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <label>Contact Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>240</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United States</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealer_Account__c</fullName>
        <description>Cash flow redesign- Sangita changed the sharing to read only. This way all partner users who can read their account can create a shipping site.</description>
        <label>Dealer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Shipping Sites (Dealer Account)</relationshipLabel>
        <relationshipName>Ship_to_Site</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>DeliverySiteType__c</fullName>
        <label>Delivery Site Type</label>
        <picklist>
            <picklistValues>
                <fullName>Construction Site</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inside Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Residence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehouse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other than ground level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other (i.e Mall , School etc)</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Other than ground level (i.e 2nd floor, etc)</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Residence (house/apartment)</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DeliveryTimeEnd__c</fullName>
        <label>Delivery Time - No Later Than</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 PM</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0 AM</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>1 AM</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>1 PM</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>10 AM</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>10 PM</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>11 AM</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DeliveryTimeStart__c</fullName>
        <description>Delivery time no earlier than for structured shipping data.</description>
        <label>Delivery Time - No Earlier Than</label>
        <picklist>
            <picklistValues>
                <fullName>12:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 AM</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 AM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11:00 PM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>0 AM</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>1 AM</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>1 PM</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>10 AM</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>10 PM</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>11 AM</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DriverAssist__c</fullName>
        <label>Driver Assist</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DropTrailer__c</fullName>
        <label>Drop Trailer</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EMEA_Alternate_Contact_Phone__c</fullName>
        <label>EMEA Alternate Contact Phone</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMEA_Alternate_Contact__c</fullName>
        <label>EMEA Alternate Contact</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EMEA_Liftgate__c</fullName>
        <label>EMEA Liftgate</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EMEA_Pallet_Jack__c</fullName>
        <label>EMEA Pallet Jack</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>EMEA_Special_Instructions__c</fullName>
        <label>EMEA Special Instructions</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>EMEA_Truck_Type__c</fullName>
        <label>EMEA Truck Type</label>
        <picklist>
            <picklistValues>
                <fullName>Standard Delivery</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Rigid Truck</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Van</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interface_Message__c</fullName>
        <label>Interface Message</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Interface_Status__c</fullName>
        <label>Interface Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to SOA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Submitted to Oracle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IsDuplicateId__c</fullName>
        <description>This is the Id of the valid shipping site and is used in the duplicate ship to site logic (OracleOrderUtility.checkNewShipToSite method)</description>
        <label>IsDuplicateId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsDuplicate__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Boolean field to flag this site as a duplicate shipping site. Will be used in the duplicate check logic as part of the upsert purchase order in the OrderAppController class.</description>
        <label>IsDuplicate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LiftGatePalletJack__c</fullName>
        <label>Lift Gate &amp; Pallet Jack</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Oracle_Account_Number__c</fullName>
        <label>Oracle Account Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_County__c</fullName>
        <label>Oracle County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Location_id__c</fullName>
        <label>Oracle Location id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oracle_Operating_Unit__c</fullName>
        <description>Cash Flow- Existing oracle operating unit field maps the partner account number instead of operating unit. We need the actual operating unit (SPNA OU, SPEB OU) to query and find one ship to site to send to Oracle via OrderIntegrationService. SOA Integraion will populate this field for all primary addresses every 1 hour. OrderAppController class will read this value to populate ship to address on the PO.</description>
        <label>Oracle Operating Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Primary__c</fullName>
        <label>Oracle Primary</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Oracle_Salesperson__c</fullName>
        <label>Oracle Salesperson</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Oracle_Ship_To_Association__c</fullName>
        <label>Oracle Ship To Association</label>
        <picklist>
            <picklistValues>
                <fullName>Y</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Partner_Portal_Registration__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, means the record has been created via partner portal registration process</description>
        <label>Partner Portal Registration</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Residential_Customer_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Residential Customer Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Ship_to_Site1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SiteID__c</fullName>
        <externalId>true</externalId>
        <label>SiteID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>SiteNumber__c</fullName>
        <description>Oracle Site Number (Party_Site_Number) to enable lookups in Oracle based on Site Id in Salesforce</description>
        <label>Site Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SpecialEquipment__c</fullName>
        <label>Special Equipment</label>
        <picklist>
            <picklistValues>
                <fullName>Flatbed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>TL - Flat bed with tarp</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Trailer &lt; 30&apos;</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Trailer &lt; 30 ft.</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inactive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>Ship to site location type.</description>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Residential Customer</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Warehouse</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>Shipping Site</label>
    <nameField>
        <displayFormat>SH-{0000}</displayFormat>
        <label>Ship to Site Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipping Sites</pluralLabel>
    <recordTypes>
        <fullName>Dealer_Warehouse</fullName>
        <active>true</active>
        <label>Dealer Warehouse</label>
    </recordTypes>
    <recordTypes>
        <fullName>Installation_Site</fullName>
        <active>true</active>
        <label>Installation Site</label>
    </recordTypes>
    <recordTypes>
        <fullName>Opportunity</fullName>
        <active>true</active>
        <label>Opportunity</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>CountryRequired</fullName>
        <active>true</active>
        <description>Country required</description>
        <errorConditionFormula>AND( $User.ByPassValidation__c =false,TEXT(Country__c) ==&apos;&apos;)</errorConditionFormula>
        <errorDisplayField>Country__c</errorDisplayField>
        <errorMessage>Country must be required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>StateRequiredForNA</fullName>
        <active>true</active>
        <errorConditionFormula>AND( $User.ByPassValidation__c = false,(State__c ==&apos;&apos; || ISNULL(State__c)) &amp;&amp; (ISPICKVAL(Country__c, &apos;United States&apos;) || ISPICKVAL(Country__c, &apos;US&apos;) || ISPICKVAL(Country__c, &apos;USA&apos;) || ISPICKVAL(Country__c, &apos;United States of America&apos;) ))</errorConditionFormula>
        <errorDisplayField>State__c</errorDisplayField>
        <errorMessage>State must be required.</errorMessage>
    </validationRules>
</CustomObject>